#
#  configure.in - hp sane backend autoconf input file
# 
#  (c) 2004 Copyright Hewlett-Packard Development Company, LP
#

AC_INIT(sane, 0.80)
AC_CONFIG_SRCDIR([hpaio.c])
AC_CONFIG_AUX_DIR(../..)
AM_INIT_AUTOMAKE(foreign)
AM_MAINTAINER_MODE
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

AC_MSG_CHECKING([for rpm install])
AC_ARG_ENABLE(rpm_install,
  [  --enable-rpm-install    enable rpm install [default=no]],
  rpm_install=$enableval, rpm_install=no)
if test "$rpm_install" = "yes"; then
   AC_MSG_RESULT(yes)
else
   AC_MSG_RESULT(no)
fi

AC_SUBST(rpm_install)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
